# bigbox-uconsole

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: discord_notify.yml
bigbox/: achievements.py  app.py  beacon_flood_engine.py  captive_portal.py  gps.py  hardware.py  oui.py  splash.py  system.py  theme.py  update_checker.py  webhooks.py  wigle.py
bigbox/input/: config.py  keyboard.py
bigbox/sections/: __init__.py  _icons.py  about.py  loot.py  operations.py  recon.py  settings.py  waveform.py  wireless.py
bigbox/ui/: __init__.py  achievements.py  beacon_bomber.py  bettercap.py  button_mapper.py  camera_interceptor.py  chat.py  eviltwin.py  handshake_manager.py  harvester.py  launcher.py  map.py  monster.py  scroll_list.py  section.py  signal_scraper.py  subdomain_enum.py  terminal.py  theme_manager.py  wardrive.py  widgets.py  wifi_attack.py  wifi_lite.py  wifi_multi_tool.py  wifite.py
bigbox/web/: auth.py  server.py
bigbox/web/templates/: index.html
config/: buttons.toml
config/themes/: README.md  hazmat_retro.json
docs/: index.html
scripts/: bigbox-xstart.sh  bigbox.service  fix-deps.sh  git-init-pi.sh  install-osint.sh  install-ub500-drivers.sh  install.sh  install_ragnar.sh  update.sh
tests/: test_views.py
