[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bigbox"
version = "0.1.0"
description = "Pentesting firmware for the ClockworkPi uConsole"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "pygame>=2.5,<3",
  "tomli>=2.0; python_version < '3.11'",
  "requests",
  "PyTurboJPEG",
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-multipart",
  "pyserial>=3.5",
  "paramiko",
  "pysmb",
  "PyMySQL",
  "cryptography",
  "bcrypt",
  "pynacl",
  "rich>=13.0.0",
  "netifaces==0.11.0",
  "ping3>=4.0.0",
  "get-mac>=0.9.0",
  "smbprotocol>=1.10.0",
  "sqlalchemy>=1.4.0",
  "python-nmap>=0.7.0",
  "flask>=3.0.0",
  "flask-socketio>=5.3.0",
  "flask-cors>=4.0.0",
  "openai>=2.0.0",
  "python-prctl>=1.8.1",
  "pandas",
  "numpy",
  "psutil",
  "yt-dlp",
  "evdev",
  "segno",
]

[project.optional-dependencies]
# Opt-in GPIO support for CM4/CM5 users with a custom hat on the uConsole's
# 40-pin GPIO FPC. Enabled at runtime by BIGBOX_USE_GPIO=1.
gpio = [
  "gpiozero>=2.0",
  "lgpio>=0.2",
]

[project.scripts]
bigbox = "bigbox.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bigbox*"]
